<resources>
    <string name="app_name">JORTEC 2018</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registar">Registar</string>
    <string name="support">Supporte</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="password_re">Password</string>
    <string name="registar_re">Registar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="next">Próximo</string>
    <string name="skip">Saltar</string>
    <string name="start">Iniciar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="jortec_eletro">Jortec Eletro</string>
    <string name="geral_neec_fct_com">geral@neec-fct.com</string>
    <string name="pergunta_ao_orador">Pergunta ao Orador</string>
    <string name="pergunta">Pergunta</string>
    <string name="enviar">Enviar</string>
    <string name="aten_o_todo_registado_fraudes_ter_o_consequencias">Atenção Todo é registado fraudes terão consequencias</string>
    <string name="chave">Chave</string>
    <string name="validar_chave">Validar chave</string>
    <string name="data">data</string>
    <string name="mantem_te_atualizado">Mantem te atualizado</string>
    <string name="a_app_vai_emitindo_notifica_es_mantem_te_atento">A app vai emitindo notificações mantem te atento!!</string>
    <string name="bem_vindo_2_app">Bem Vindo á 2º APP</string>
    <string name="completamente_redesenhada_para_uma_jortec_mais_interativa">Completamente redesenhada para uma JORTEC mais interativa.</string>
    <string name="partifica_nos_workshop_e_mantem_te_atento_s_redes_socias_do_evento">Participa nos workshop e mantem te atento ás redes socias do evento</string>
    <string name="ganha_pr_mios_fantasticos">Ganha prêmios fantasticos</string>
    <string name="desenvolvido_por_jo_o_veloso_e_beatriz_salvado">Desenvolvido por João Veloso e Beatriz Salvado</string>
    <string name="o_n_cleo_de_engenharia_eletrot_cnica_e_de_computadores_neec_da_faculdade_de_ci_ncias_e_tecnologia_uma_associa_o_sem_fins_lucrativos_composto_pelos_estudantes_de_mieec_da_fct">O Núcleo de Engenharia Eletrotécnica e de Computadores (NEEC) da Faculdade de Ciências e Tecnologia é uma associação sem fins lucrativos composto pelos estudantes de MiEEC da FCT.</string>
    <string name="receber_um_email_do_neec_com_a_sua_password">Receberá um email do neec com a sua password</string>
    <string name="clicar_no_cadeado_para_abrir_a_porta">Clicar no cadeado para abrir a Porta</string>
    <string name="recuperar_conta">Recuperar Conta</string>
    <string name="confirmar">Confirmar</string>
    <string name="mudar">Mudar</string>
    <string name="nova_password">Nova Password</string>
    <string name="vers_o_1_4">Versão 2.0</string>
    <string name="vers_o_2_1">Versão 2.1</string>
    <string name="sem_acesso">Sem Acesso</string>
    <string name="jo_o_veloso">João Veloso</string>
    <string name="todo">TODO</string>
    <string name="logo_neec">Logo NEEC</string>
</resources>
